@@ -1,3 +1,7 @@
+2007-03-06	Michael Riepe  <too-tired@users.sourceforge.net>
+
+	* Report missing frames in GOP while indexing.
+
 2007-02-12	Michael Riepe  <too-tired@users.sourceforge.net>
 
 	* Write proper GOP time_code values when exporting.
